--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </article>
         </main>
         <aside>Aside</aside>
-        <footer>Mini paga 1 footer</footer>
+        <footer>Mini pagina 1 footer</footer>
     </section>
     <h1 class="aqua">CSS</h1>
     header>nav>ul>li>a[href="#"]{link $}>
