--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+    <li><a href="c:/Users/DELL/Desktop/website51/FernandoFlores2004/index.html">Listado de prácticas</a></li>
     section#p1>(header>nav>ul>(li>a[href='#']{link$})*6)+main+aside+footer
     <section id="p1">
         <header>
